FindBugs: refactoring all errors.